--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -9,10 +9,10 @@ server {
     try_files $uri /index.html;
   }
 
-  # Optional: proxy API via relative path /api -> backend
-  # location /api/ {
-  #   proxy_pass http://backend:5000/api/;
-  #   proxy_set_header Host $host;
-  #   proxy_set_header X-Real-IP $remote_addr;
-  # }
+  # Proxy API via relative path /api -> backend service in Docker network
+  location /api/ {
+    proxy_pass http://backend:5000/api/;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+  }
 }
