--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       - MONGODB_URI=mongodb://mongo:27017/healthtracker
       - PORT=5000
       - NODE_ENV=production
+      - JWT_SECRET=your_jwt_secret_key_here
     depends_on:
       - mongo
     ports:
@@ -30,7 +31,7 @@ services:
     build:
       context: ./client
       args:
-        VITE_API_URL: http://localhost:5000/api
+        VITE_API_URL: /api
     container_name: healthtracker-frontend
     restart: unless-stopped
     depends_on:
