--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -2,22 +2,23 @@
 FROM node:20-alpine AS build
 WORKDIR /app
 
-# Ensure devDependencies are installed regardless of external env
-ENV NPM_CONFIG_PRODUCTION=false
+# Force development mode so devDependencies (vite, plugin-react, tailwind, etc.) are installed.
+ENV NODE_ENV=development
 
-COPY package.json package-lock.json* .npmrc* ./
+COPY package.json package-lock.json* ./
 
-# Prefer clean, reproducible install; fall back to install if no lockfile
-RUN npm ci --include=dev --no-audit --no-fund || npm install --include=dev --no-audit --no-fund \
-	&& npm cache clean --force
+# Install dependencies (dev included). Use npm install rather than npm ci if lockfile absent.
+RUN if [ -f package-lock.json ]; then npm ci --no-audit --no-fund; else npm install --no-audit --no-fund; fi \
+	&& npm cache clean --force \
+	&& ls -1 node_modules/.bin | grep -i vite || (echo "Vite not installed" && exit 1)
 
 COPY . .
 
 ARG VITE_API_URL
 ENV VITE_API_URL=${VITE_API_URL}
 
-# Build using local vite binary in node_modules/.bin
-RUN npm run build
+# Build using local vite binary (explicit path for clarity)
+RUN node_modules/.bin/vite build
 
 FROM nginx:1.27-alpine AS production
 WORKDIR /usr/share/nginx/html
