--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -2,28 +2,30 @@
 FROM node:20-alpine AS build
 WORKDIR /app
 
-# Ensure devDependencies are installed regardless of external env
-ENV NPM_CONFIG_PRODUCTION=false
-
+# Copy only manifest first to leverage Docker layer cache
 COPY package.json package-lock.json* .npmrc* ./
 
-# Prefer clean, reproducible install; fall back to install if no lockfile
-RUN npm ci --include=dev --no-audit --no-fund || npm install --include=dev --no-audit --no-fund \
+# Force dev dependencies installation even if NODE_ENV is set elsewhere
+RUN npm install --no-audit --no-fund --production=false \
 	&& npm cache clean --force
 
+# Copy the rest of the source (node_modules excluded by .dockerignore)
 COPY . .
 
+# Build-time API URL
 ARG VITE_API_URL
 ENV VITE_API_URL=${VITE_API_URL}
 
-# Build using local vite binary in node_modules/.bin
+# Run build using local vite binary from node_modules/.bin (no need for global install)
 RUN npm run build
 
 FROM nginx:1.27-alpine AS production
 WORKDIR /usr/share/nginx/html
 
+# Provide custom nginx config
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
+# Copy built assets
 COPY --from=build /app/dist .
 
 EXPOSE 80
