--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,14 +1,12 @@
+FROM node:20-alpine
 
-FROM node:20-alpine AS base
 WORKDIR /app
 
-COPY package.json package-lock.json* .npmrc* ./
-RUN npm install --no-audit --no-fund --production=false && npm cache clean --force
+COPY package*.json ./
+RUN npm install --only=production
 
 COPY . .
 
 EXPOSE 5000
 
-ENV NODE_ENV=production
-
-CMD ["node", "server.js"]
+CMD ["npm", "start"]
