--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,43 +1,34 @@
+
 services:
   mongo:
     image: mongo:6.0
-    container_name: healthtracker-mongo
-    restart: unless-stopped
-    environment:
-      MONGO_INITDB_DATABASE: healthtracker
-    volumes:
-      - mongo_data:/data/db
+    container_name: mongo
     ports:
       - "27019:27017"
+    volumes:
+      - mongo_data:/data/db
 
   backend:
-    build:
-      context: ./server
-    container_name: healthtracker-backend
-    restart: unless-stopped
-    env_file:
-      - ./server/.env
-    environment:
-      - MONGODB_URI=mongodb://mongo:27017/healthtracker
-      - PORT=5000
-      - NODE_ENV=production
-      - JWT_SECRET=your_jwt_secret_key_here
-    depends_on:
-      - mongo
+    build: ./server
+    container_name: backend
     ports:
       - "5002:5000"
+    env_file:
+      - ./server/.env
+    depends_on:
+      - mongo
 
   frontend:
     build:
       context: ./client
       args:
+        # Use same-origin relative URL; nginx.conf proxies /api -> backend
         VITE_API_URL: /api
-    container_name: healthtracker-frontend
-    restart: unless-stopped
-    depends_on:
-      - backend
+    container_name: frontend
     ports:
       - "3002:80"
+    depends_on:
+      - backend
 
 volumes:
   mongo_data:
