--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGODB_URI=mongodb://localhost:27017/healthtracker
+MONGODB_URI=mongodb://mongo:27017/healthtracker
 JWT_SECRET=your_jwt_secret_key_here
