--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -1,30 +1,55 @@
-- hosts: servers
-  become: yes
+---
+- name: Deploy HealthTracker using Docker Compose
+  hosts: servers
+  become: true
 
   tasks:
+
+    - name: Update apt cache
+      apt:
+        update_cache: yes
+
+    - name: Install required packages
+      apt:
+        name:
+          - ca-certificates
+          - curl
+          - gnupg
+          - lsb-release
+        state: present
+
     - name: Install Docker
       apt:
         name: docker.io
         state: present
-        update_cache: yes
 
-    - name: Install docker-compose
-      get_url:
-        url: https://github.com/docker/compose/releases/latest/download/docker-compose-Linux-x86_64
-        dest: /usr/local/bin/docker-compose
-        mode: '0755'
+    - name: Install Docker Compose plugin
+      apt:
+        name: docker-compose-plugin
+        state: present
 
-    - name: Create deploy directory
+    - name: Start and enable Docker
+      service:
+        name: docker
+        state: started
+        enabled: yes
+
+    - name: Create application directory
       file:
         path: /opt/healthtracker
         state: directory
 
-    - name: Copy docker-compose file
+    - name: Copy docker-compose.yml to server
       copy:
-        src: docker-compose.yml
+        src: ../docker-compose.yml
         dest: /opt/healthtracker/docker-compose.yml
 
-    - name: Deploy application
-      command: docker-compose up -d
+    - name: Pull latest Docker images
+      command: docker compose pull
+      args:
+        chdir: /opt/healthtracker
+
+    - name: Start application containers
+      command: docker compose up -d
       args:
         chdir: /opt/healthtracker
