--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,2 +1,2 @@
-[servers]
-healthtracker ansible_host=68.183.239.7 ansible_user=root
+[healthtracker]
+server ansible_host=178.128.221.36 ansible_user=root
