--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -1,55 +1,34 @@
----
-- name: Deploy HealthTracker using Docker Compose
-  hosts: servers
+- name: Setup HealthTracker server
+  hosts: healthtracker
   become: true
 
   tasks:
-
-    - name: Update apt cache
+    - name: Update apt
       apt:
         update_cache: yes
-
-    - name: Install required packages
-      apt:
-        name:
-          - ca-certificates
-          - curl
-          - gnupg
-          - lsb-release
-        state: present
 
     - name: Install Docker
       apt:
         name: docker.io
         state: present
 
-    - name: Install Docker Compose plugin
+    - name: Install docker-compose plugin
       apt:
         name: docker-compose-plugin
         state: present
 
-    - name: Start and enable Docker
+    - name: Start Docker
       service:
         name: docker
         state: started
         enabled: yes
 
-    - name: Create application directory
-      file:
-        path: /opt/healthtracker
-        state: directory
-
-    - name: Copy docker-compose.yml to server
+    - name: Copy docker-compose file
       copy:
         src: ../docker-compose.yml
-        dest: /opt/healthtracker/docker-compose.yml
+        dest: /root/docker-compose.yml
 
-    - name: Pull latest Docker images
-      command: docker compose pull
-      args:
-        chdir: /opt/healthtracker
-
-    - name: Start application containers
+    - name: Deploy app
       command: docker compose up -d
       args:
-        chdir: /opt/healthtracker
+        chdir: /root
