--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -1,11 +1,13 @@
+---
 - name: Setup HealthTracker server
-  hosts: all
+  hosts: healthtracker
   become: true
 
   tasks:
     - name: Update apt
       apt:
         update_cache: yes
+        upgrade: dist
 
     - name: Install required packages
       apt:
@@ -16,22 +18,26 @@
           - lsb-release
         state: present
 
+    - name: Create Docker keyring directory
+      file:
+        path: /etc/apt/keyrings
+        state: directory
+        mode: "0755"
+
     - name: Add Docker GPG key
       shell: |
         curl -fsSL https://download.docker.com/linux/ubuntu/gpg | \
-        gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
+        gpg --dearmor -o /etc/apt/keyrings/docker.gpg
       args:
-        creates: /usr/share/keyrings/docker-archive-keyring.gpg
+        creates: /etc/apt/keyrings/docker.gpg
 
     - name: Add Docker repository
-      shell: |
-        echo \
-        "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] \
-        https://download.docker.com/linux/ubuntu \
-        $(lsb_release -cs) stable" | \
-        tee /etc/apt/sources.list.d/docker.list
-      args:
-        creates: /etc/apt/sources.list.d/docker.list
+      apt_repository:
+        repo: >
+          deb [arch=amd64 signed-by=/etc/apt/keyrings/docker.gpg]
+          https://download.docker.com/linux/ubuntu
+          {{ ansible_lsb.codename }} stable
+        state: present
 
     - name: Update apt after adding Docker repo
       apt:
@@ -43,11 +49,29 @@
           - docker-ce
           - docker-ce-cli
           - containerd.io
+          - docker-buildx-plugin
           - docker-compose-plugin
         state: present
+
+    - name: Reload systemd
+      command: systemctl daemon-reexec
+
+    - name: Enable containerd
+      systemd:
+        name: containerd
+        enabled: yes
+        state: started
 
     - name: Enable Docker
       systemd:
         name: docker
-        enabled: true
+        enabled: yes
         state: started
+
+    - name: Verify Docker
+      command: docker --version
+      register: docker_version
+
+    - name: Show Docker version
+      debug:
+        msg: "{{ docker_version.stdout }}"
