--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,9 @@ services:
     image: dinethkeragala/healthtracker-server:latest
     container_name: backend
     restart: always
-    env_file:
-      - .env
+    environment:
+      MONGO_URI: mongodb://mongo:27017/healthtracker
+      JWT_SECRET: supersecret
     ports:
       - "5000:5000"
     depends_on:
