--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     container_name: backend
     restart: always
     environment:
-      MONGO_URI: mongodb://mongo:27017/healthtracker
+      MONGODB_URI: mongodb://mongo:27017/healthtracker
       JWT_SECRET: supersecret
     ports:
       - "5000:5000"
